<resources>
    <string name="app_name">List This! 2.0</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="this_2_0">This! 2.0</string>
    <string name="list">list</string>
    <string name="already_a_user_login_here">Already a User ? Login Here</string>
    <string name="register">Register</string>
    <string name="list2">list</string>
    <string name="this_2_02">This!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New User ? Register Here</string>
    <string name="username">Username</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_item_suited_for">Enter Item Suited For</string>
    <string name="enter_image_link">Enter Image Link</string>
    <string name="enter_item_link">Enter Item Link</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add_your_item">Add to Inventory</string>
    <string name="title_activity_edit_course">EditCourseActivity</string>
    <string name="enter_item_name2">Enter Item Name</string>
    <string name="enter_item_price2">Enter Item Price</string>
    <string name="enter_item_image_link2">Enter Item Image Link</string>
    <string name="enter_item_suited_for2">Enter Item Suited For</string>
    <string name="enter_item_link2">Enter Item Link</string>
    <string name="enter_item_description2">Enter Item Description</string>
    <string name="delete_your_n_item">Delete\nItem</string>
    <string name="update_your_n_item">Update\nItem</string>
    <string name="course_name">Item Name</string>
    <string name="suited_for">Suited for</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="edit_course">Edit Item</string>
    <string name="view_details">View Details</string>
    <string name="todo">TODO</string>
    <string name="course_name2">Item Name</string>
    <string name="price2">Price</string>
    <string name="todo2">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_name2">Enter User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="register2">Register</string>
    <string name="already_a_user_login_here2">Already a User ? Login Here</string>
</resources>