<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRLBSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient2"
    android:padding="4dp">

    <!--text view for displaying course name-->
    <TextView
        android:id="@+id/idTVItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="4dp"
        android:text="@string/course_name"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!--image view for displaying course image-->
    <ImageView
        android:id="@+id/idIVItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/idTVItemName"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/todo"
        android:padding="4dp"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <!--text view for displaying course description-->
    <TextView
        android:id="@+id/idTVItemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVItemName"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/idIVItem"
        android:padding="3dp"
        android:text="@string/description"
        android:textColor="@color/white" />

    <!--text view for displaying course best suited for-->
    <TextView
        android:id="@+id/idTVSuitedFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVItemDesc"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/idIVItem"
        android:padding="3dp"
        android:text="@string/suited_for"
        android:textColor="@color/white" />

    <!--text view for displaying course price-->
    <TextView
        android:id="@+id/idTVItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVSuitedFor"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/idIVItem"
        android:padding="3dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVItemPrice"
        android:orientation="horizontal"
        android:weightSum="2">

        <!--button for editing course-->
        <Button
            android:id="@+id/idBtnEditItem"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:text="@string/edit_course"
            android:textAllCaps="false"
            android:textColor="#D500F9" />

        <!--button for viewing course details-->
        <Button
            android:id="@+id/idBtnVIewDetails"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textColor="#D500F9" />

    </LinearLayout>

</RelativeLayout>