<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".EditItemActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--edit text for adding a item name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_item_name2"
                android:padding="5dp"
                android:textColorHint="@color/purple_200"
                android:background="@drawable/rounded_outline"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtItemName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:background="@null"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--edit text for adding a item price-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_item_price2"
                android:padding="5dp"
                android:textColorHint="@color/purple_200"
                android:background="@drawable/rounded_outline"
                app:boxStrokeColor="@color/purple_200"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:background="@null"
                    app:boxStrokeColor="@color/purple_200"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--edit text for adding a item best suited for-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILItemSuitedFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_item_suited_for2"
                android:padding="5dp"
                android:textColorHint="@color/purple_200"
                android:background="@drawable/rounded_outline"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtSuitedFor"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:background="@null"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--edit text for adding a item image link-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILItemImageLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_item_image_link2"
                android:padding="5dp"
                android:textColorHint="@color/purple_200"
                android:background="@drawable/rounded_outline"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtItemImageLink"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:background="@null"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--edit text for adding a item link-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILItemLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_item_link2"
                android:padding="5dp"
                android:textColorHint="@color/purple_200"
                android:background="@drawable/rounded_outline"
                app:hintTextColor="@color/white"
                 >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtItemLink"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:background="@null"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <!--edit text for adding a item description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILItemDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_item_description2"
                android:padding="5dp"
                android:textColorHint="@color/purple_200"
                android:background="@drawable/rounded_outline"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--button for updating a new item-->
                <Button
                    android:id="@+id/idBtnAddItem"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_back"
                    android:text="@string/update_your_n_item"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <!--button for deleting a item-->
                <Button
                    android:id="@+id/idBtnDeleteItem"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="#FF0000"
                    android:text="@string/delete_your_n_item"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <!--progress bar for displaying a loading indicator-->
        <ProgressBar
            android:id="@+id/idPBLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_back"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>